--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,13 @@
     -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=MonteCarlo&family=Montserrat:ital,wght@0,100;0,300;0,400;0,700;1,100;1,900&display=swap"
+    rel="stylesheet">
+
   <title>React App</title>
 </head>
 
